<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_gravity="center"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewAddCuId"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold|italic"
            android:text="@string/add_cu" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddChvNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chv_name"
                android:textSize="30sp"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddChvPhoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chv_phone"
                android:textSize="30sp"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_margin="40dp"
            android:text="@string/save"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSaveChvEditId"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>